<resources>
    <string name="app_name">Android Kotlin Learning Application</string>
    <string name="show_toast_button">Show Toast</string>
    <string name="show_dialogue_button">Show Dialogue</string>
    <string name="show_web_view_button">Show Web View Window</string>
    <string name="show_Implicit_Intent_button">Show Implicit Intent</string>
    <string name="show_Explicit_Intent_button">Show Explicit Intent</string>
    <string name="show_data_transfer_example_button">Show Data Transfer From One Screen To Other</string>
    <string name="text_view_new_activity">Welcome to New Activity</string>
    <string name="splash_loading_text">Loading...</string>
</resources>